feat: add eslint + prettier to the project

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Movies Explorer Application created by Abuzar Mamedov"
     />
-    <title>React App</title>
+    <meta name="author" content="Abuzar Mamedov" />
+    <title>Movies Explorer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
