feat: create insane amount of functionality

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Movies Explorer Application created by Abuzar Mamedov"
     />
     <meta name="author" content="Abuzar Mamedov" />
+    <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon" />
     <title>Movies Explorer</title>
   </head>
   <body class="page">
